Changed many names

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>jsImp - JavaScript Imperium Client</title>
+		<title>jsMek - JavaScript Battletech MUX Client</title>
 
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="JavaScript/HTML5 Imperium Client">
+		<meta name="description" content="JavaScript/HTML5 Battletech MUX Client">
 
 		<meta name="author" content="Fernando L. Canizo, Marisa Giancarla">
-		<meta name="contact" content="https://empiredirectory.net/index.php/misc/contact-us">
+		<meta name="contact" content="https://mekcity.com/index.php/contact-us">
 
 		<link rel="icon" href="favicon.ico">
 
@@ -60,7 +60,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">jsImp Imperium Client</a>
+					<a class="navbar-brand" href="#">jsMek Battletech MUX Client</a>
 				</div>
 
 				<div id="navbar" class="navbar-collapse collapse">
@@ -337,7 +337,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-							<h4 class="modal-title">jsImp Imperium Client</h4>
+							<h4 class="modal-title">jsMek Battletech MUX Client</h4>
 						</div>
 						<div class="modal-body">
 							<div class="row">
