Updated the title image

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12" id="mainStuff">
-					<img src="img/logo-1000x1000.svg" id="splashScreen" class="centeredImage">
+					<img src="img/logo-1000x1000.png" id="splashScreen" class="centeredImage">
 					<div id="fTelnetContainer" class="hidden"></div>
 				</div>
 			</div>
