--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
 		<link rel="stylesheet" href="bower_components/fTelnet/release/ftelnet.css">
 		<link rel="stylesheet" href="" id="fTelnetKeyboardCss">
 		<link rel="stylesheet" href="css/style.css">
-		<link rel="apple-touch-icon" sizes="72x72" href="img/logo-72x72.png" />
-		<link rel="apple-touch-icon" sizes="144x144" href="img/logo-144x144.png" />
+		<link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
 		<meta name="apple-mobile-web-app-capable" content="yes">
+		<link rel="mask-icon" href="img/safari-pinned-tab.svg" color="#5bbad5">
+		<meta name="theme-color" content="#ffffff">
 		<!-- iPad Portrait -->
 		<link href="img/Launch-768x1004-port.png" media="(device-width: 768px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 1)" rel="apple-touch-startup-image">
 
