Try to put in purchase check

--- a/index.html
+++ b/index.html
@@ -367,6 +367,18 @@
 		<script src="bower_components/fTelnet/release/ftelnet.min.js" id="fTelnetScript"></script>
 		<script src="js/htmlterm.settings.js"></script>
 		<audio controls src="http://radio.opensimcity.org:8188/;.mp3"></audio>
+<script>
+$.get("/ipaid.txt")
+    .done(function() { 
+        // exists code 
+document.write("They paid");
+    }).fail(function() { 
+document.write("They didnt pay");
+        // not exists code
+</script>
 		<script type="text/javascript" src="http://ad.leadboltmobile.net/show_app_ad.js?section_id=884041206"></script>
+<script>
+    })
+</script>
 </body>
 </html>
