--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
 							<div class="row">
 								<div class="col-lg-12">
 									<img src="img/logo-150x150.png" class="centeredImage">
-									<p class="muted text-center">(C) 2014-2015 Pocketfiction</p>
+									<p class="muted text-center">(C) 2016 Mek City</p>
 								</div>
 							</div>
 						</div>
