--- a/index.html
+++ b/index.html
@@ -373,6 +373,11 @@
     					alert("in showAds");
 					<script type="text/javascript" src="http://ad.leadboltmobile.net/show_app_ad.js?section_id=884041206"></script>
 				-->
+		</script>
+		<center>
+			<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=game_downloads&banner=07YBAJRZ4ZYJNPDJS3G2&f=ifr&linkID=cfe70febc5e4bb641cd8a23574732dfc&t=undertheskin-20&tracking_id=undertheskin-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+		</center>
+		<script>
 			}
 
 			$.ajax({
