--- a/index.html
+++ b/index.html
@@ -368,16 +368,42 @@
 		<script src="js/htmlterm.settings.js"></script>
 
 		<script>
-			function showAds() {
-				<!--
-    					alert("in showAds");
-					<script type="text/javascript" src="http://ad.leadboltmobile.net/show_app_ad.js?section_id=884041206"></script>
-				-->
-		</script>
-		<center>
-			<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=game_downloads&banner=07YBAJRZ4ZYJNPDJS3G2&f=ifr&linkID=cfe70febc5e4bb641cd8a23574732dfc&t=undertheskin-20&tracking_id=undertheskin-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
-		</center>
-		<script>
+			function showAds()
+			{
+				var whichad = Math.floor((Math.random() * 10) + 1);
+				switch (whichad)
+					case: 1
+					case: 2
+					case: 3
+						<!--
+    							alert("in showAds");
+							<script type="text/javascript" src="http://ad.leadboltmobile.net/show_app_ad.js?section_id=884041206"></script>
+						-->
+						break;
+					case: 4
+					case: 5
+					case: 6
+					case: 7
+						</script>
+						<center>
+						<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=game_downloads&banner=07YBAJRZ4ZYJNPDJS3G2&f=ifr&linkID=cfe70febc5e4bb641cd8a23574732dfc&t=undertheskin-20&tracking_id=undertheskin-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
+						</center>
+						<script>
+						break;
+					case: 8
+					case: 9
+					case: 10
+						</script>
+						<center>
+						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+						<input type="hidden" name="cmd" value="_s-xclick">
+						<input type="hidden" name="hosted_button_id" value="5L64BMWZB8TJQ">
+						<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+						</form>
+						</center>
+						<script>
+						break;
 			}
 
 			$.ajax({
