--- a/index.html
+++ b/index.html
@@ -384,16 +384,15 @@
 					case: 5
 					case: 6
 					case: 7
-						</script>
+						Document.write('
 						<center>
 						<iframe src="//rcm-na.amazon-adsystem.com/e/cm?o=1&p=48&l=ur1&category=game_downloads&banner=07YBAJRZ4ZYJNPDJS3G2&f=ifr&linkID=cfe70febc5e4bb641cd8a23574732dfc&t=undertheskin-20&tracking_id=undertheskin-20" width="728" height="90" scrolling="no" border="0" marginwidth="0" style="border:none;" frameborder="0"></iframe>
-						</center>
-						<script>
+						</center>');
 						break;
 					case: 8
 					case: 9
 					case: 10
-						</script>
+						Document.write('
 						<center>
 						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 						<input type="hidden" name="cmd" value="_s-xclick">
@@ -402,7 +401,7 @@
 						<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 						</form>
 						</center>
-						<script>
+						);
 						break;
 			}
 
