--- a/index.html
+++ b/index.html
@@ -265,12 +265,12 @@
 							<form role="form">
 								<div class="form-group">
 									<label for="iServerName">Server Name</label>
-									<input type="text" class="form-control" id="iServerName" placeholder="empiredirectory.net">
+									<input type="text" class="form-control" id="iServerName" placeholder="mekcity.com">
 								</div>
 
 								<div class="form-group">
 									<label for="iPort">Port</label>
-									<input type="text" class="form-control" id="iPort" placeholder="3458">
+									<input type="text" class="form-control" id="iPort" placeholder="3067">
 								</div>
 
 								<div class="form-group">
